* reporting best (mfe) seed per interaction
* outMode=C
  + sorting
  + columns Eall, Zall, P_E
  * marker "NAN" for not available values
* outMode=D
  * index ranges without whitespaces, i.e. "1--5" instead of "1 -- 5"
  + highlighting of all bps part of putative seeds
* E_type now int (was float)
- IntaRNA v1 output support not continued

###############################

190716 Martin Raden :
 * bin/CommandLineParsing :
   - high memory warning disabled

190607 Martin Raden :
 * IntaRNA/general :
   * deleteOutputStream() :
     - no warning if not a file stream (to support temporary stringstreams)
 * IntaRNA/OutputHandlerCsv :
   + colTypeNumericSort : list of types that need numerical sorting
   * notAvailable : now "NAN" (was "NA")
   - colOrder : renamed to columns
   + columns (former colOrder)
 + IntaRNA/OutputStreamHandler : generic handler to wrap the output stream
 + IntaRNA/OutputStreamHandlerSortedCsv : OSH that stores output in temporary
   stringstream to be finally sorted by the values of a given column
 * bin/CommandLineParsing :
   - outStream : replaced by outStreamHandler
   + outStreamHandler : central OutputStreamHandler object
   + outCsvColSep : CSV column separator
   + outCsvLstSep : CSV value-list separator 
   + outCsvSort : optional parameter to define the CSV column for sorting
   * destructor() :
     * outStream deletion
   * parse() :
     + parsing and setup CSV sorting
   - getOutputStream() : replaced by outStreamHandler->getOutStream()
 * README.md :
   + outCsvSort documentation
 - perl/IntaRNA_1ui.pl : v1 support ends   
 - perl/IntaRNA_up_1ui.pl : v1 support ends   

190606 Martin Raden :
 * IntaRNA/OutputHandlerText :
 * IntaRNA/OutputHandlerCsv :
   * add() :
     * bugfix: Pu values were truncated like energies 
 * IntaRNA/HelixHandlerNoBulgeMax :
   * fillHelixSeed() :
     * bugfix: leadingE computation was shifted by one index to the right
 * bin/CommandLineParsing :